# ============================================================================
# Options Pricing & Risk Engine — top-level CMake build script
# ============================================================================
# Planned contents (to be filled in when implementation begins):
#   - cmake_minimum_required / project() declaration (C++20)
#   - Compiler warnings & optimization flags (Release: -O3 / /O2)
#   - Library target `opre` built from src/**, public headers in include/
#   - Executable target `opre_cli` from apps/main.cpp, linked against opre
#   - enable_testing() + add_subdirectory(tests)
#   - Optional: FetchContent for a test framework (Catch2 or GoogleTest)
# ============================================================================
